bin = [
    { name = "mkfile", path = "src/main.rs" },
]

[package]
name = "mkfiler"
version = "1.0.6"
edition = "2024"
authors = [
    "Hadi Cahyadi <cumulus13@gmail.com>",
]
description = "Cross-platform file creation utility with GNTP/Growl integration"
homepage = "https://github.com/cumulus13/mkfiler"
repository = "https://github.com/cumulus13/mkfiler"
license = "MIT"
keywords = [
    "mkfile",
    "touch",
    "notification",
    "gntp",
]
exclude = [
    "gitignore_backup/",
    "mkfile.exe",
    "mkfiler.exe",
    "target/",
    "mkfiler.sublime-project",
    "mkfiler.sublime-workspace",
    ".pt/",
    "test/",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs",
]

[dependencies]
gntp = "0.1.3"
lazy_static = "1.5.0"
regex = "1.12.2"
